apply new design

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,4 @@
-<div class="post clear">
-  <div class="thumbnail">
-    <p><%= image_tag(image_path('sample.jpg'), :width => 500) %></p>
-  </div>
-
-  <div class="entry">
-    <h2><a href="/services" rel="bookmark">RubyConf China May 21</a></h2>
-    Description goes here.
-  </div>
-</div>
+<h2>Welcome to Ruby Conf China 2009</h2>
+Sessions goes here
+<h2>Location</h2>
+Location goes here
