--- a/app/views/layouts/application.en.html.erb
+++ b/app/views/layouts/application.en.html.erb
@@ -5,18 +5,13 @@
 
 <title>Welcome to RubyConf China 2009</title>
 
-<%= stylesheet_link_tag 'reset', 'style' %>
+<link rel="stylesheet" href="css/blueprint/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="css/blueprint/print.css" type="text/css" media="print">	
+<!--[if IE]><link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+
 <script src="/javascripts/jquery.js" type="text/javascript"></script>
 <script src="/javascripts/jquery-ui.js" type="text/javascript"></script>
 <script src="/javascripts/jrails.js" type="text/javascript"></script>
-
-<%= stylesheet_link_tag 'comatose_admin' %>
-<%= javascript_include_tag 'comatose_admin' %>
-
-<!--[if lte IE 6]>
-<%= stylesheet_link_tag 'legacy' %>
-<![endif]-->
-
 </head>
 <body>
 
