--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -22,15 +22,49 @@
 }
 #navigation a:hover {
   color: #999;
+}       
+
+#nav{
+	margin-bottom:20px;
+	padding-left:100px;
+	text-align:center;
+}
+
+#nav ul{
+	margin-left:auto; margin-right:auto;
+} 
+
+#nav ul li{ 
+	list-style:none;
+	float:left;
+	height:128px;
+	line-height: 188px;
+	overflow: hidden;
+} 
+
+#nav ul li a {
+  text-decoration: none;
+  color: #666;
+  font-size: 16px;
+  padding: 0 5px;
+}
+#nav ul li a:hover {
+  color: #999;
 }
 
 body {
   background: url(/images/background.jpg) repeat-x;
   font: 0.8em/1.5 "arial",sans-serif; 
   color: #303030; 
+}  
+
+#map_canvas{
+	width:700px;
+	height:300px;
 }
 
-#logo {
+#logo { 
+  width:300px;
   position: relative;
   left: 10px;
   top:10px;
