add sponsor and speaker page

--- a/app/views/home/sponsors.html.erb
+++ b/app/views/home/sponsors.html.erb
@@ -1,2 +1,14 @@
-<h1><%= t('sponsor')%></h1> 
+<h1><%= t('sponsor')%></h1>
+
+<div class="speaker">
+  <img src="/images/sponsors/ekohe.png" >
+  <h4>Ekohe</h4>
+  <p>
+     Ekohe  is a cutting-edge web design and development  firm based in Shanghai, China and Paris, France. We utilize the latest and greatest web technologies to make you happy.
+  </p>
+  <p>
+    We started on February 2007, as the first Ruby on Rails development company in Shanghai, China  and now, we are certainly the most experienced  team you can find in China. 
+  </p>
+</div>
+
 <%= render :comatose=> "#{params[:locale]}/sponsors" %>
