--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -51,4 +51,4 @@
 <div id="map">
    <div id="map_canvas"></div>  
 </div>
-<%= render :comatose=> "#{params[:locale]}/about" %>
+<%= render :comatose=> "#{params[:locale]}/program" %>
