--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
 
 <title>Welcome to RubyConf China 2009</title>
 
@@ -20,8 +20,8 @@
     </div>
 
     <div id="navigation">
-      <%=link_to t('loc'),location_path %> |
-      <%=link_to t('register'),register_path %> |
+      <%=link_to t('about'),about_path %> |
+      <%=link_to t('register'),reg_path %> |
       <%=link_to t('sponsor'),sponsors_path %> | 
       <%=link_to t('speaker'),speakers_path %>     
     </div>
