--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-
-<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-
-<title>Welcome to RubyConf China 2009</title>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
 
 <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="screen, projection">
 <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen, projection">
@@ -22,8 +20,8 @@
 
     <div id="nav">
     <ul>
-      <li><%=link_to t('loc'),location_path %></li>
-      <li><%=link_to t('register'),register_path %></li>
+      <li><%=link_to t('about'),about_path %></li>
+      <li><%=link_to t('register'),reg_path %></li>
       <li class='logo'>
         <a href="/"><img src="/images/logo.png" alt="Ruby Conf China 2009" /></a>
       </li>
