--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -9,6 +9,12 @@
 <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen, projection">
 <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print">	
 <!--[if IE]><link rel="stylesheet" href="/stylesheets/ie.css" type="text/css" media="screen, projection"><![endif]-->
+
+<script src="/javascripts/jquery.js" type="text/javascript"></script>
+<script src="/javascripts/jquery-ui.js" type="text/javascript"></script>
+<script src="/javascripts/jrails.js" type="text/javascript"></script>
+<script src="/javascripts/jcarousellite.min.js" type="text/javascript"></script>
+
 </head>
 <body>
 
