--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,20 @@
 <div class='span-14'>
+  <h2>Speakers</h2>
   <div class="default">
-  <ul>
-    <li>
-      <img src="/images/speakers/matz.jpg" width="170" height="170" /><br />
-    </li>
-    
-    <li>
-      <img src="/images/speakers/robbin.jpg" width="170" height="170" /><br />
-    </li>
-    
-    <li>
-      <img src="/images/speakers/matz.jpg" width="170" height="170" />
-    </li>
-    
-    <li>
-      <img src="/images/speakers/robbin.jpg" width="170" height="170"/>
-    </li>
-  </ul>
-
+    <ul>
+      <li>
+        <img src="/images/speakers/matz.jpg" width="170" height="170" /><br />
+      </li>
+      <li>
+        <img src="/images/speakers/robbin.jpg" width="170" height="170" /><br />
+      </li>
+      <li>
+        <img src="/images/speakers/matz.jpg" width="170" height="170" />
+      </li>
+      <li>
+        <img src="/images/speakers/robbin.jpg" width="170" height="170"/>
+      </li>
+    </ul>
   </div>
   
   <script type="text/javascript" charset="utf-8">
