--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
+
 <div class='span-14'>
-  <h2>Speakers</h2>
+  <h2>Speakers</h2>   
+<% if false -%>      
   <div class="default">
     <ul>
       <li>
@@ -26,7 +28,8 @@
     });
     
     
-  </script>
+  </script>  
+<% end -%>
 	<%= render :comatose=> "#{params[:locale]}/front" %>
 </div> 
 
