--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-
-<link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen, projection">
+<title>Welcome to RubyConf China 2009</title> 
+<%= stylesheet_link_tag 'screen','application',:cache => true %>
 <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print">	 
-<%= yield :javascripts_tag%>
+<%= yield :javascripts_tag %>
 <!--[if IE]><link rel="stylesheet" href="/stylesheets/ie.css" type="text/css" media="screen, projection"><![endif]-->
 </head>
 <%= yield :body_tag %>
 
 <div class="container">
+	<div id="languages" class='lang'>
+	  <%=link_to 'English',root_en_path%> |
+	  <%=link_to '中文',root_zh_cn_path%>
+	</div>                  
   <div id="header" class="clear span-18">
-    <div id="languages">
-      <%=link_to 'English',root_en_path%> |
-      <%=link_to '中文',root_zh_cn_path%>
-    </div>
-
     <div id="nav">
     <ul>
       <li><%=link_to t('about'),about_path %></li>
