--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,16 +1,14 @@
-#languages{
-  float: right;
-  font-size:12px;
-  margin-right: 10px;
-  margin-top: 10px;
+#languages{  
+  text-align:right;
+  font-size:14px;
+  padding-top:10px; 
 }
 
 #navigation {
   display: block;
   float: right;
   position: relative;
-  top: 70px;
-  left: 80px;
+  top:65px;
   z-index: 5;
 }
 
@@ -25,12 +23,11 @@
 }       
 
 #nav{
-	margin-bottom:20px;
-	padding-left:100px;
+	padding-left:120px;
 	text-align:center;
 }
 
-#nav ul{
+#nav ul{   
 	margin-left:auto; margin-right:auto;
 } 
 
@@ -129,7 +126,8 @@ height:90px;
 fieldset {
   -moz-border-radius: 13px;
   -webkit-border-radius: 13px;
-  width: 500px;
+  width: 500px;         
+  border: 3px solid #EFEFEF;
   background-color: #FFFFFF;
 }
 
@@ -145,19 +143,26 @@ fieldset label {
 
 fieldset input {
   background-color: #DBFDFF;
-  border: 1px solid;
+  border-left: 1px solid #EFEFEF;
   height: 16px;
+}
+
+fieldset select{  
+	border-left: 1px solid #EFEFEF;
+  font-size:14px;
+  background-color: #DBFDFF;   
+  width:185px;
 }
 
 #attendee_description{
 	width:320px;
 	height:120px;
 	background-color: #DBFDFF;
-    border: 1px solid;
+  border-left: 1px solid #EFEFEF;   
 }
 
 .reg_form{
-	margin-left:60px;
+	margin-left:110px;
 }
 
 .image-submit{
