--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -53,10 +53,7 @@
 </div> 
   <div id="footer">
     <p>
-      <a href="/en/contact">Contact</a> |
-      <a href="/en/contact">Sponor</a> |
-      <%= link_to 'About', about_path %>
-  	  &copy; 2009 Shanghai on Rails, JavaEye
+  	  &copy; 2009 www.rubyconfchina.com
   </div>
 
 </body>
