--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -26,10 +26,12 @@
     </div>
 
     <div id="navigation">
-      <%=link_to t('about'),about_path %> |
+	  <%=link_to t('about'),about_path %> | 
+      <%=link_to t('pro'),program_path %> |
       <%=link_to t('register'),reg_path %> |
       <%=link_to t('sponsor'),sponsors_path %> | 
-      <%=link_to t('speaker'),speakers_path %>     
+      <%=link_to t('speaker'),speakers_path %> |
+	  <%=link_to t('contact'),contacts_path %>     
     </div>
 
     <div id="logo">
