--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -23,7 +23,7 @@
 }       
 
 #nav{
-	padding-left:120px;
+	padding-left:60px;
 	text-align:center;
 }
 
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 { font-size:200%; }
 h2 { font-size:170%; font-weight: normal;}
-h3 { font-size:105%; border-bottom: 1px solid #ddd;}
+h3 { font-size:105%; margin-top:10px;}
 h4 { font-size:120%; }
 h5 { font-size:100%; }
 
@@ -176,4 +176,14 @@ fieldset select{
 } 
 .sponsor_logo img{
 	margin-bottom:10px;
+}
+
+.be_sponsor{
+	text-align:right;
+	clear:both;
+	font-size:14px;
+} 
+
+.contact p{
+	padding-left:10px;
 }
