--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         <a href="/"><img src="/images/logo.png" alt="Ruby Conf China 2009" /></a>
       </li>
       <li><%=link_to t('sponsor'),sponsors_path %></li>
-      <li><%=link_to t('speaker'),speakers_path %></li>
+      <li><%=link_to t('loc'),location_path %></li>
 	<li><%=link_to t('contact'),contacts_path %> </li>
       </ul>
     </div>
