--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -30,7 +30,7 @@
       <%=link_to t('pro'),program_path %> |
       <%=link_to t('register'),reg_path %> |
       <%=link_to t('sponsor'),sponsors_path %> | 
-      <%=link_to t('speaker'),speakers_path %> |
+      <%=link_to t('loc'),location_path %> |
 	  <%=link_to t('contact'),contacts_path %>     
     </div>
 
