--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t('contact_us')%></h1> 
 <div class='contact'>
-	<h2><%=t('sponsorship')%><h2>
+	<h2><%=t('sponsorship')%></h2>
 	<h3><%=t('oversea')%>:</h3> 
 	<p>
 	<strong><%=t('scott')%></strong>   <%=t('email')%>:scott#ekohe.com  <%=t('tel')%>: + 86 21 6288 2886
