--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 	</div>
 </div>
 	<h2><%= t('orgnizer') %></h2>
-	<%=link_to image_tag('javaeye-logo.gif'),'http://www.javaeye.com',:target => '_blank'%>
+	<%=link_to image_tag('javaeye-logo.gif'),'http://www.javaeye.com',:target => '_blank',:alt=>"Javaeye logo"%>
 	<%=link_to image_tag('shanghaionrails-logo.gif'),'http://www.shanghaionrails.com',:target => '_blank'%> 
 	 <div class='be_sponsor'>
 		<b><%=link_to t('about'),about_path %></b> 
