--- a/app/views/home/location.html.erb
+++ b/app/views/home/location.html.erb
@@ -1,8 +1,11 @@
 <% body_tag(map = true) %>    
 <h1><%= t('loc')%></h1>      
 <% content_for :javascripts_tag do %>
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAACO2fGhe5a6fInVzxhxw9DxT5TJQJ2U8Gm0nvpFHqoEic8BSE_RSVBmhxpvGn5z5Fv_hK2JoILL6gFQ&hl=<%=params[:locale]%>"
-      type="text/javascript"></script>
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false
+    &amp;key=ABQIAAAACO2fGhe5a6fInVzxhxw9DxT5TJQJ2U8Gm0nvpFHqoEic8BSE_RSVBmhxpvGn5z5Fv_hK2JoILL6gFQ"
+    type="text/javascript">
+  </script>
+
 
     <script type="text/javascript">
 
