adjust logo size and fix map

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 <div class=' sponsor_logo'> 
 	<%=link_to image_tag('sponsors/ekohe.gif'),"http://www.ekohe.com/",:target => '_blank'%>
 	<%=link_to image_tag('sponsors/tg.gif'),"http://sites.google.com/site/tengusoftwaredevelopment/Home",:target => '_blank'%>
-	<%=link_to image_tag('sponsors/caibangzi.gif',:size => "100x60"),"http://caibangzi.com/", :target => '_blank'%>
+	<%=link_to image_tag('sponsors/caibangzi.gif', :width => "150"),"http://caibangzi.com/", :target => '_blank'%>
 	<div class='be_sponsor'>
 		 <b><%=link_to t('be_sponsor'),contacts_path %></b>
 	</div>
