--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -10,16 +10,12 @@
 <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print">	
 <!--[if IE]><link rel="stylesheet" href="/stylesheets/ie.css" type="text/css" media="screen, projection"><![endif]-->
 
-<script src="/javascripts/jquery.js" type="text/javascript"></script>
-<script src="/javascripts/jquery-ui.js" type="text/javascript"></script>
-<script src="/javascripts/jrails.js" type="text/javascript"></script>
-<script src="/javascripts/jcarousellite.min.js" type="text/javascript"></script>
 
 </head>
 <body>
 
 <div class="container">
-  <div id="header" class="clear span-18">
+  <div class="clear span-18">
     <div id="languages">
       <%=link_to 'English',root_en_path%> |
       <%=link_to '中文',root_zh_cn_path%>
@@ -38,17 +34,23 @@
       <a href="/"><img src="/images/logo.png" alt="Ruby Conf China 2009" /></a>
     </div>
     <div id="cover" class="clear span-18">
+	   <div id="panel-left">
+	   	    I'd happy to meet with Ruby users in China. <span>→Matz</span>
+	   </div>
        <div id="panel-right">
        	<span class='date'><%= t('event_date')%> <br />
 		<span class='location'><%= t('location')%></span>
        </div>
-    </div>    
+    </div>
+
   </div>
 
-  <div id="content">
+  <div id="content"> 
+
     <div>
       <%= flash[:notice] if flash[:notice] %>
-    </div>
+    </div>    
+
     <%= yield %>
   </div> 
   <hr />
