--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -56,8 +56,7 @@
   <hr />
 </div> 
   <div id="footer">
-    <p>
-  	  &copy; 2009 www.rubyconfchina.com
+ &copy; 2009 <a href="http://javaeye.com">JavaEye</a>, <a href="http://shanghaionrails.org">Shanghai on Rails</a>, Hosted by <a href="http://zoomtype.info">ZoomType</a>
   </div>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
