--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
   <h3><%= t('diamond_sponsor') %></h3>
   <h3><%= t('platinum_sponsor') %></h3>
    <div class=' sponsor_logo'>
-    <%=link_to image_tag('sponsors/pinpoint.jpg'),"http://www.pinpoint.cn/", :target => '_blank'%>
+    <%=link_to image_tag('sponsors/pinpoint.gif'),"http://www.pinpoint.cn/", :target => '_blank'%>
   </div>
   
   <h3><%= t('golden_sponsor') %></h3>
