--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,11 +15,15 @@
   </div>
   
   <h3><%= t('golden_sponsor') %></h3>
-   <div class=' sponsor_logo'>  
+  <div class=' sponsor_logo'>  
      <%=link_to image_tag('sponsors/caibangzi.gif', :width => "120"),"http://caibangzi.com/", :target => '_blank'%>
   </div>
   
   <h3><%= t('silver_sponsor') %></h3>
+  <div class=' sponsor_logo'>  
+     <%=link_to image_tag('sponsors/kembo.gif', :width => "120"),"http://kembo-net.com/", :target => '_blank'%>
+  </div>
+  
   <div class='be_sponsor'>
     <b><%=link_to t('be_sponsor'),contacts_path %></b>
   </div>
