--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,12 @@
 </div> 
 
 <div class='span-4 last'>
+  <h3><%= t('partner')%></h3>
+  <div class=' sponsor_logo'>
+    <%=link_to image_tag('sponsors/ekohe.gif'),"http://www.ekohe.com/",:target => '_blank'%>
+    <%=link_to image_tag('sponsors/tg.gif'),"http://sites.google.com/site/tengusoftwaredevelopment/Home",:target => '_blank'%>
+  </div>
+  
   <h3><%= t('diamond_sponsor') %></h3>
   <h3><%= t('platinum_sponsor') %></h3>
    <div class=' sponsor_logo'>
@@ -21,17 +27,12 @@
   
   <h3><%= t('silver_sponsor') %></h3>
   <div class=' sponsor_logo'>  
+     <%=link_to image_tag('sponsors/roredu.gif', :width => "120"),"http://roredu.com/", :target => '_blank'%>
      <%=link_to image_tag('sponsors/kembo.gif', :width => "120"),"http://kembo-net.com/", :target => '_blank'%>
   </div>
   
   <div class='be_sponsor'>
     <b><%=link_to t('be_sponsor'),contacts_path %></b>
-  </div>
-  
-   <h3><%= t('partner')%></h3>
-  <div class=' sponsor_logo'>
-    <%=link_to image_tag('sponsors/ekohe.gif'),"http://www.ekohe.com/",:target => '_blank'%>
-    <%=link_to image_tag('sponsors/tg.gif'),"http://sites.google.com/site/tengusoftwaredevelopment/Home",:target => '_blank'%>
   </div>
   
   <h3><%= t('orgnizer') %></h3>
