--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,9 @@
 
 <div class='span-4 last'>
   <h3><%= t('diamond_sponsor') %></h3>
-    <%=link_to image_tag('sponsors/ekohe.gif'),"http://www.ekohe.com/",:target => '_blank'%>
+   <div class=' sponsor_logo'>  
+    <%=link_to image_tag('sponsors/ekohe.gif', :width => '120'),"http://www.ekohe.com/",:target => '_blank'%>
+  </div>
   <h3><%= t('platinum_sponsor') %></h3>
    <div class=' sponsor_logo'>
     <%=link_to image_tag('sponsors/pinpoint.gif'),"http://www.pinpoint.cn/", :target => '_blank'%>
