--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,6 +28,7 @@
   <h3><%= t('golden_sponsor') %></h3>
   <div class=' sponsor_logo'>  
      <%=link_to image_tag('sponsors/caibangzi.gif', :width => "120"),"http://caibangzi.com/", :target => '_blank'%>
+     <%=link_to image_tag('sponsors/tg.gif', :width => "120"),"http://http://sites.google.com/site/tengusoftwaredevelopment/Home", :target => '_blank'%>
   </div>
   
   <h3><%= t('silver_sponsor') %></h3>
