--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -35,12 +35,8 @@
     </div>
     <div id="cover" class="clear span-18">
 	   <div id="panel-left">
-	   	    I'd happy to meet with Ruby users in China. <span>→Matz</span>
+	   	   We are already closed
 	   </div>
-       <div id="panel-right">
-       	<span class='date'><%= t('event_date')%> <br />
-		<span class='location'><%= t('location')%></span>
-       </div>
     </div>
 
   </div>
