--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,4 @@
+
 #languages{  
   text-align:right;
   font-size:14px;
@@ -91,7 +92,7 @@ body {
 	display: block;
 	font-weight: bold;
 	float:left;
-	padding: 45px 20px 10px 40px;
+	padding: 60px 20px 10px 150px;
 	color:#ffffff;
 	font-size:28px;
 	width:380px;
@@ -235,3 +236,7 @@ fieldset select{
 	color:#F5000C;            
 } 
 
+ul li{
+	list-style:none;
+	line-height:20px;
+}
