update speaker page

--- a/app/views/home/report.html.erb
+++ b/app/views/home/report.html.erb
@@ -1,13 +1,11 @@
 <div class='span-13 append-1'>    
-<h2>Buzz</h2>  
+<h2>Twitter</h2>  
 <ul>
 <li><a href='http://twitter.com/#search?q=%23RubyConfChina' target='_blank'>Real-time talking for #RubyConfChina on twitter</a>  </li>    
 </ul>     
 
-<h2>Video Cast</h2>
-<ul>
-<li>Please wait</li>      
-</ul>
+<h2>Video & PPT</h2>
+<h1><a href="/speakers">Uploaded, Click to View</a></h1>
 <h2>Photo</h2>
 <ul>
 <li><a href='http://picasaweb.google.com/taweili/RubyConfChina?authkey=Gv1sRgCNTA5P2B-vGDPw#' target='_blank'>Photos(by David Li)</a>  </li>     
@@ -17,12 +15,8 @@ Robin Lu)</a>  </li>
 rubyac)</a>  </li> 
 <li><a href='http://www.flickr.com/photos/rainux/sets/72157618484203275/' target='_blank'>Photos(by  Rainux)</a>  </li>    
 </ul> 
-<h2>PPT</h2> 
-<ul>
-<li><a href='http://www.robinlu.com/blog/archives/468' target='_blank'>robinlu's ppt</a>  </li>      
-</ul>  
 
-<h2>Blog Posts</h2>
+<h2>Posts</h2>
 <ul>
 <li><a href='http://dreamhead.blogbus.com/logs/39725321.html' target='_blank'>'RubyConf China' by 郑晔</a> </li>      
 </ul>   
