--- a/app/views/home/speakers.html.erb
+++ b/app/views/home/speakers.html.erb
@@ -1,3 +1,3 @@
-<h1><%= t('venue')%></h1>
-<%=link_to image_tag('javaeye-logo.gif'),'http://www.javaeye.com',:target => '_blank'%>
-<%=link_to image_tag('shanghaionrails-logo.gif'),'http://www.shanghaionrails.com',:target => '_blank'%>
+<h1><%= t('speaker')%></h1>
+
+<%= render :comatose=> "zh-CN/speakers" %>
