--- a/app/views/home/report.html.erb
+++ b/app/views/home/report.html.erb
@@ -1,7 +1,11 @@
 <div class='span-13 append-1'>    
 <h2>Twitter</h2>  
 <ul>
-<li><a href='http://twitter.com/#search?q=%23RubyConfChina' target='_blank'>Real-time talking for #RubyConfChina on twitter</a>  </li>    
+<li><a href='http://twitter.com/#search?q=%23RubyConfChina' target='_blank'>Real-time talking for #RubyConfChina on twitter</a>  </li>     
+<li><a href='http://dreamhead.blogbus.com/logs/39725321.html' target='_blank'>blog post about rubyconfchina by 郑晔</a> </li>  
+<li><a href='http://quake.javaeye.com/blog/394318' target='_blank'>热情和享受 -- RubyConfChina流水帐</a> </li>    
+<li><a href='http://www.javaeye.com/topic/393041' target='_blank'>分享才会进步--RubyConf China大会归来有感</a> </li>    
+   
 </ul>     
 
 <h2>Video & PPT</h2>
@@ -15,14 +19,6 @@ Robin Lu)</a>  </li>
 rubyac)</a>  </li> 
 <li><a href='http://www.flickr.com/photos/rainux/sets/72157618484203275/' target='_blank'>Photos(by  Rainux)</a>  </li>    
 </ul> 
-
-<h2>Posts</h2>
-<ul>
-<li><a href='http://dreamhead.blogbus.com/logs/39725321.html' target='_blank'>'RubyConf China' by 郑晔</a> </li>      
-</ul>   
-	<p class='reg'>
-   		Keeping on update!!
-	</p>
 	
 	<h2>Orgnizer</h2>
 	<p style="margin-left: 50px;"> 
