--- a/app/views/home/report.html.erb
+++ b/app/views/home/report.html.erb
@@ -1,10 +1,13 @@
 <div class='span-13 append-1'>    
-<h2>Twitter</h2>  
+<h2>Press</h2>  
 <ul>
-<li><a href='http://twitter.com/#search?q=%23RubyConfChina' target='_blank'>Real-time talking for #RubyConfChina on twitter</a>  </li>     
-<li><a href='http://dreamhead.blogbus.com/logs/39725321.html' target='_blank'>blog post about rubyconfchina by 郑晔</a> </li>  
-<li><a href='http://quake.javaeye.com/blog/394318' target='_blank'>热情和享受 -- RubyConfChina流水帐</a> </li>    
-<li><a href='http://www.javaeye.com/topic/393041' target='_blank'>分享才会进步--RubyConf China大会归来有感</a> </li>    
+<li><a href='http://twitter.com/#search?q=%23RubyConfChina' target='_blank'>Real-time talking for #RubyConfChina on twitter</a>  </li> 
+<li><a href='http://odwks.com/2009/06/ruby-growth-in-china/' target='_blank'>blog post by Jon</a>  </li> 
+<li><a href='http://www.elctech.com/articles/first-rubyconf-china' target='_blank'>Blog post by Daniel</a>  </li>     
+<li><a href='http://pic.yupoo.com/wear/953257895f07/15cz6g6q.jpg' target='_blank'>Japanese leading industry news paper NIKKEI SANGYO reported about RubyConf.China!</a>  </li>  
+<li><a href='http://dreamhead.blogbus.com/logs/39725321.html' target='_blank'>blog post about rubyconfchina by dreamhead</a> </li>  
+<li><a href='http://quake.javaeye.com/blog/394318' target='_blank'>blog post about rubyconfchina by quake</a> </li>    
+<li><a href='http://www.javaeye.com/topic/393041' target='_blank'>blog post about rubyconfchina from javaeye.com</a> </li>    
    
 </ul>     
 
