add discussion borad

--- a/app/views/layouts/front.html.erb
+++ b/app/views/layouts/front.html.erb
@@ -29,7 +29,7 @@
     </div>
     <div id="cover" class="clear span-18">
 	   <div id="panel-left">
-	   	   We are already closed
+	   	   会议已经结束,期待下次精彩.<%=link_to '参与讨论','http://muutang.com'%>  
 	   </div>
     </div>
 
